# ionbox

./: .biomeignore  LICENSE  README.md  biome.json  components.json  ionbox.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/: App.tsx  TestApp.tsx  back.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  ionbox.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ion_config.rs  ion_const.rs  ion_error.rs  ion_states.rs  lib.rs  localhost.rs  localserver.rs  main.rs  oauth2.json  oauth2.rs  watery_config.rs  watery_const.rs  watery_error.rs  watery_states.rs
src-tauri/src/commands/: cmd_auth.rs  mod.rs
src-tauri/src/entities/: mod.rs  oauth2_record.rs  prelude.rs
src-tauri/src/migration/: m20241031_000001_create_oauth_table.rs  mod.rs
src-tauri/src/utils/: mod.rs
src/components/: AccountSwitcher.tsx  EmailDashboard.tsx  FakeMail.tsx  Login.tsx  Mail.tsx  MailDisplay.tsx  MailList.tsx  MailNav.tsx  MainLayout.tsx  Page.tsx  Settings.tsx  UseMail.ts  openlink.tsx
src/components/ui/: calendar.tsx
