[package]
name = "watery"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "watery_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-deep-link = "2.0.0-rc"
tauri-plugin-log = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
oauth2 = "5.0.0-rc"
http = "1.1.0"
log = "0.4"
cfg_aliases = "0.2.1"
warp = "0.3"
futures = "0.3"
tokio = { version = "1.40.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "socks"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2.0.0-rc", features = ["deep-link"] }
